organize simple action with server